--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.1.6",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "aws-amplify": "^6.12.1",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
