--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@react-navigation/native": "^7.0.14",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.12.1",
-    "expo": "~52.0.26",
-    "expo-blur": "~14.0.2",
+    "expo": "^52.0.27",
+    "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.4",
     "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
@@ -40,9 +41,12 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "gifted-charts-core": "^0.1.57",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.55",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
